--- a/src/blocks/components/vacancy/vacancy.scss
+++ b/src/blocks/components/vacancy/vacancy.scss
@@ -56,7 +56,15 @@
             bottom: 0;
             width: 100%;
             height: 50px;
-            background: linear-gradient(to bottom, transparent 0, #f7f7f7 80%);
+            /* stylelint-disable */
+            background: -moz-linear-gradient(top, rgba(247, 247, 247, 0) 0%, rgba(247, 247, 247, 1) 80%);
+            background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(247, 247, 247, 0)), color-stop(80%, rgba(247, 247, 247, 1)));
+            background: -webkit-linear-gradient(top, rgba(247, 247, 247, 0) 0%, rgba(247, 247, 247, 1) 80%);
+            background: -o-linear-gradient(top, rgba(247, 247, 247, 0) 0%, rgba(247, 247, 247, 1) 80%);
+            background: -ms-linear-gradient(top, rgba(247, 247, 247, 0) 0%, rgba(247, 247, 247, 1) 80%);
+            background: linear-gradient(to bottom, rgba(247, 247, 247, 0) 0%, rgba(247, 247, 247, 1) 80%);
+            filter: progid:dximagetransform.microsoft.gradient( startColorstr="#f7f7f7", endColorstr="#f7f7f7", GradientType=0 );
+            /* stylelint-enable */
         }
 
         & p {
